@@ -1,3 +1,5 @@
+-Fix some corner cases in scheduler, where scheduler could get stuck on a
+ near empty queue.
 -Make sync more robust in corner cases
 -Icon now works on Windows 7.
 -Regression fix: Mnemosyne now remembers again the column width in the card 
